feat: experiment without framework

--- a/0_foundations/lab1.ipynb
+++ b/0_foundations/lab1.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "3a956734",
+   "metadata": {},
+   "source": [
+    "# Explore different LLMs and evaluate them with a powerful judge. \n",
+    "\n",
+    "In this lab, I'll be working directly with various Large Language Models (LLMs). I'll ask a single question to each LLM via different inference providers and then evaluate their responses using a powerful LLM from OpenAI. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "id": "713b0d63",
@@ -1416,14 +1426,6 @@
     "    competitor = competitors[int(result)-1]\n",
     "    print(f\"Rank {index+1}: {competitor}\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "746df4c2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
